--- a/ui/package.json
+++ b/ui/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "npx next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "npx next start",
+    "lint": "npx next lint"
   },
   "dependencies": {
     "axios": "^1.6.2",
